<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/navi_home"
        android:title="@string/home"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/navi_search"
        android:title="@string/nav_search"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/navi_messages"
        android:title="@string/nav_message"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/navi_settings"
        android:title="@string/nav_settings"
        android:enabled="true"/>
</menu>
